# app-lottery-back

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/adapters/controllers/: comment_controller.rs  mod.rs
src/application/services/: comment_service.rs  mod.rs
src/domain/entities/: comment.rs
src/infrastructure/: config.rs  mod.rs  tiktok_api.rs
