[package]
name = "app-lottery"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
kuchiki = "0.8"
tokio = { version = "1", features = ["full"] }
#comsumir apis
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"